DL-2384: Added css files to correct colour contrasts for WCAG 2.1

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,7 @@
+a.banner-links {
+    color: #0B0B0B;
+}
+
 button {
     margin: 20px 0px 30px 0px;
 }
